--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 axum = "0.8.8"
 thiserror = "2.0.17"
 serde = "1.0.228"
+serde_json = "1.0"
 uuid = { version = "1.11.0", features = ["v4"] }
 chrono = "0.4.39"
 sea-orm = "1.1.19"
